@@ -18,6 +18,7 @@
  
 TreeTank 4.19
 -------------
+ 1 Fixed bug with NestedAxis.
  0 Local part and prefix are no longer stored separately but as qualified name.
    Binary incompatibility with 4.18.
  
